--- a/views/dca103onlineclasschapter20.ejs
+++ b/views/dca103onlineclasschapter20.ejs
@@ -91,7 +91,39 @@ sound effects, Setting slide timings, Rehearse timings, Grouping and ungrouping 
                 
                 </div>  <!--Syllabus end-->
                 
-                
+                <% 
+                        
+                        var paidStudent = [];
+                        
+                        if(studentFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentFee.length; i++) {
+                        
+                        if(studentFee[i].feeAmount >= 1000) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentExamFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentExamFee.length; i++) {
+                        
+                        if(studentExamFee[i].feeAmount == 1510) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentOtherFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentOtherFee.length; i++) {
+                        
+                        if(studentOtherFee[i].feeAmount >= 499) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(paidStudent.includes('paid')) {
+                        %> 
                 
                 
                 <div class="accordion-item"> <!--khuhhawnna section started-->
@@ -755,7 +787,7 @@ computer? <br><b>Ans... </b> Pack and Go
 </div>
     
     
-
+<% } %>
   </body>
   
   
