--- a/views/dca104welcomepage.ejs
+++ b/views/dca104welcomepage.ejs
@@ -76,6 +76,40 @@
                               
                               </div>
                               
+                              <% 
+                        
+                        var paidStudent = [];
+                        
+                        if(studentFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentFee.length; i++) {
+                        
+                        if(studentFee[i].feeAmount >= 1000) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentExamFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentExamFee.length; i++) {
+                        
+                        if(studentExamFee[i].feeAmount == 1510) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentOtherFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentOtherFee.length; i++) {
+                        
+                        if(studentOtherFee[i].feeAmount >= 499) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(paidStudent.includes('paid')) {
+                        %>
+                              
                               <div class=" col-lg-3 col-md-6 col-sm-6"> 
                               
                               <a href="dca104onlineclasschapter2"><button type="button" class="btn btn-link m-2">Chapter-2 <i class="fas fa-angle-right"></i></button></a>
@@ -106,7 +140,8 @@
                               <a href="dca104onlineclasschapter6"><button type="button" class="btn btn-link m-2">Chapter-6 <i class="fas fa-angle-right"></i></button></a>
                             
                             </div>
-
+                          
+                          <% } %>
                             
                           </div> <!--fourth subject row end-->
 
