--- a/views/dca106onlineclasschapter2.ejs
+++ b/views/dca106onlineclasschapter2.ejs
@@ -135,7 +135,39 @@ Document.
                 
                 </div>  <!--Syllabus end-->
                 
-                
+                <% 
+                        
+                        var paidStudent = [];
+                        
+                        if(studentFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentFee.length; i++) {
+                        
+                        if(studentFee[i].feeAmount >= 1000) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentExamFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentExamFee.length; i++) {
+                        
+                        if(studentExamFee[i].feeAmount == 1510) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentOtherFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentOtherFee.length; i++) {
+                        
+                        if(studentOtherFee[i].feeAmount >= 499) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(paidStudent.includes('paid')) {
+                        %> 
                 
                 
                 <div class="accordion-item"> <!--video section started-->
@@ -838,7 +870,7 @@ files for placement in other applications
     </div>
   </div>
 </div>
-
+<% } %>
   </body>
   
   
