--- a/views/dca1semOnlineLessonChapter7.ejs
+++ b/views/dca1semOnlineLessonChapter7.ejs
@@ -127,7 +127,39 @@ Characteristics of a Good Programming Language, Selecting a Language for Coding 
                   </div>
                 
                 </div>  <!--Syllabus video end-->
-                
+                 <% 
+                        
+                        var paidStudent = [];
+                        
+                        if(studentFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentFee.length; i++) {
+                        
+                        if(studentFee[i].feeAmount >= 1000) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentExamFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentExamFee.length; i++) {
+                        
+                        if(studentExamFee[i].feeAmount == 1510) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentOtherFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentOtherFee.length; i++) {
+                        
+                        if(studentOtherFee[i].feeAmount >= 499) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(paidStudent.includes('paid')) {
+                        %>
                 
                 
                 
@@ -863,11 +895,6 @@ its equivalent machine language program is <br><b>Ans... </b> Assembler
     </div>
   </div>
 </div> 
-    
-    
-    
-
+<% } %>
   </body>
-  
-  
 </html>
