--- a/views/home.ejs
+++ b/views/home.ejs
@@ -102,8 +102,8 @@
         <thead>
           <tr>
             <th style="width: 34%;"></th>
-            <th style="width: 22%;">Free</th>
-            <th style="width: 22%;">Paid</th>
+            <th style="width: 22%;">Free Account</th>
+            <th style="width: 22%;">Paid Account</th>
             <th style="width: 22%;">Amount</th>
           </tr>
         </thead>
@@ -119,6 +119,9 @@
             <td></td>
             <td><svg class="bi" width="24" height="24"><use xlink:href="#check"/></svg></td>
             <td> Rs. 499/se</td>
+          </tr>
+          <tr>
+            <td colspan="4" class="mb-1">Free account leh paid account sawifiahna: <a class="link-secondary text-decoration-none" href="/paid_unpaid_account"> Read More</a></td>
           </tr>
         </tbody>
       </table>
