--- a/views/stdDashboard.ejs
+++ b/views/stdDashboard.ejs
@@ -23,6 +23,53 @@
        <!-- --------------latest score------------------ -->
     <div class="row">
         
+        <% 
+                        var paidStudent = [];
+                        
+                        if(studentFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentFee.length; i++) {
+                        
+                        if(studentFee[i].feeAmount >= 1000) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentExamFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentExamFee.length; i++) {
+                        
+                        if(studentExamFee[i].feeAmount == 1510) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentOtherFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentOtherFee.length; i++) {
+                        
+                        if(studentOtherFee[i].feeAmount >= 499) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(paidStudent.includes('paid')) {
+                            
+                            %> 
+                            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+  <strong>Hello Dear!</strong> Kan website-ah kan lo lawm a che. Kan lesson siamte hi hriatthiam a harsa i ti a nih pawhin beidawng lo la,
+  muangchangin hmanhmawh lovin zir ang che. Zawhfiah duhte i neih chuan kan office-a thawktute leh kan instructor te i zawtfiah zel dawn nia. 
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+                            
+                       <% } else {%>
+                            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+  <strong>Hello Dear!</strong> Tuna i account hi unpaid account a ni a, lesson tam tak i zir thei dawn lo a, study material i download thei dawn lo bawk a ni.
+  Account chungchang hi i hriatthiam theih nan <a href="/paid_unpaid_account" class="text-primary"> Learn more</a> hi click ang che. Zawhfiah duhte i neih chuan kan office-a thawkte i lo zawt zel dawn nia. 
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+                     <%   } %> 
+        
       <div class="table-responsive mt-4 mb-2 col-lg-6 col-md-6 col-xs-12">
         
         <table class="table table-sm table-hover shadow-sm mx-auto" style="max-width:500px">
