--- a/views/dca101welcomepage.ejs
+++ b/views/dca101welcomepage.ejs
@@ -7,19 +7,13 @@
 <body>
     
     <%- include('layouts/navbar') -%>
-    
-
 
 <!-- --------------main container section------------------ -->
 
 <div class="container">
 
-    <main class="ms-sm-auto">
-      
-
+    <main>
       <!--a lane chung lam-->
-      
-
         
         <div class="row">
           
@@ -71,6 +65,40 @@
                               <a href="dca1semOnlineLessonChapter1"><button type="button" class="btn btn-link m-2">Chapter-1 <i class="fas fa-angle-right"></i></button></a>
                               
                               </div>
+                              
+                        <% 
+                        
+                        var paidStudent = [];
+                        
+                        if(studentFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentFee.length; i++) {
+                        
+                        if(studentFee[i].feeAmount >= 1000) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentExamFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentExamFee.length; i++) {
+                        
+                        if(studentExamFee[i].feeAmount == 1510) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentOtherFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentOtherFee.length; i++) {
+                        
+                        if(studentOtherFee[i].feeAmount >= 499) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(paidStudent.includes('paid')) {
+                        %>
                               
                               <div class=" col-lg-3 col-md-6 col-sm-6"> 
                               
@@ -125,6 +153,7 @@
                               <a href="dca1semOnlineLessonChapter10"><button type="button" class="btn btn-link m-2">Chapter-10 <i class="fas fa-angle-right"></i></button></a>
                                 
                                 </div>
+                                <% } %>
 
                               </div>  <!--row end for first chapter-->
                         
