--- a/views/dca102onlineclasschapter3.ejs
+++ b/views/dca102onlineclasschapter3.ejs
@@ -121,7 +121,39 @@ An Overview of Different Versions of Windows, Main Features of Windows Operating
                 
                 </div>  <!--Syllabus end-->
                 
-                
+                <% 
+                        
+                        var paidStudent = [];
+                        
+                        if(studentFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentFee.length; i++) {
+                        
+                        if(studentFee[i].feeAmount >= 1000) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentExamFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentExamFee.length; i++) {
+                        
+                        if(studentExamFee[i].feeAmount == 1510) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentOtherFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentOtherFee.length; i++) {
+                        
+                        if(studentOtherFee[i].feeAmount >= 499) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(paidStudent.includes('paid')) {
+                        %>    
                 
                 
                 <div class="accordion-item"> <!--video section started-->
@@ -774,7 +806,7 @@ and the latest in the series is  Windows  10  (July  29, 2015).
     </div>
   </div>
 </div>
-
+<% } %>
   </body>
   
   
