--- a/views/dca102onlineclasschapter4.ejs
+++ b/views/dca102onlineclasschapter4.ejs
@@ -121,7 +121,39 @@ The Desktop, Icons and their Types, The Taskbar, Elements of a Window
                 
                 </div>  <!--Syllabus end-->
                 
-                
+                <% 
+                        
+                        var paidStudent = [];
+                        
+                        if(studentFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentFee.length; i++) {
+                        
+                        if(studentFee[i].feeAmount >= 1000) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentExamFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentExamFee.length; i++) {
+                        
+                        if(studentExamFee[i].feeAmount == 1510) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentOtherFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentOtherFee.length; i++) {
+                        
+                        if(studentOtherFee[i].feeAmount >= 499) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(paidStudent.includes('paid')) {
+                        %>    
                 
                 
                 <div class="accordion-item"> <!--video section started-->
@@ -814,7 +846,7 @@ iii) On the extreme right is the notification area.
     </div>
   </div>
 </div>
-
+<% } %>
   </body>
   
   
