--- a/views/dca102onlineclasschapter5.ejs
+++ b/views/dca102onlineclasschapter5.ejs
@@ -122,7 +122,39 @@
                 
                 </div>  <!--Syllabus end-->
                 
-                
+                <% 
+                        
+                        var paidStudent = [];
+                        
+                        if(studentFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentFee.length; i++) {
+                        
+                        if(studentFee[i].feeAmount >= 1000) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentExamFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentExamFee.length; i++) {
+                        
+                        if(studentExamFee[i].feeAmount == 1510) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentOtherFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentOtherFee.length; i++) {
+                        
+                        if(studentOtherFee[i].feeAmount >= 499) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(paidStudent.includes('paid')) {
+                        %>    
                 
                 
                 <div class="accordion-item"> <!--video section started-->
@@ -831,7 +863,7 @@ Note: <em> Wildcard character * hi a hawrrawp vaiin / a hawrrawp zawng zawngin t
     </div>
   </div>
 </div>
-    
+    <% } %>
 
   </body>
   
