--- a/views/dca102welcomepage.ejs
+++ b/views/dca102welcomepage.ejs
@@ -5,7 +5,7 @@
       <%- include('layouts/navbar') -%>
       <!-- --------------main container section------------------ -->
       <div class="container">
-      <main class="ms-sm-auto">
+      <main>
          <!--a lane chung lam-->
          <div class="row">
           <div class="mx-auto shadow-sm rounded px-2 pb-4 mt-2">
@@ -40,6 +40,39 @@
                            <div class="col-lg-3 col-md-6 col-sm-6"> 
                               <a href="dca102onlineclasschapter1"><button type="button" class="btn btn-link m-2">Chapter-1 <i class="fas fa-angle-right"></i></button></a>
                            </div>
+                           <% 
+                        
+                        var paidStudent = [];
+                        
+                        if(studentFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentFee.length; i++) {
+                        
+                        if(studentFee[i].feeAmount >= 1000) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentExamFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentExamFee.length; i++) {
+                        
+                        if(studentExamFee[i].feeAmount == 1510) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentOtherFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentOtherFee.length; i++) {
+                        
+                        if(studentOtherFee[i].feeAmount >= 499) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(paidStudent.includes('paid')) {
+                        %>
                            <div class=" col-lg-3 col-md-6 col-sm-6"> 
                               <a href="dca102onlineclasschapter2"><button type="button" class="btn btn-link m-2">Chapter-2 <i class="fas fa-angle-right"></i></button></a>
                            </div>
@@ -67,6 +100,7 @@
                            <div class="col-lg-3 col-md-6 col-sm-6"> 
                               <a href="dca102onlineclasschapter10"><button type="button" class="btn btn-link m-2">Chapter-10 <i class="fas fa-angle-right"></i></button></a>
                            </div>
+                           <% } %>
                         </div>
                         <!--end of subject 2 chapter-->
                      </div>
