--- a/views/dca103onlineclasschapter15.ejs
+++ b/views/dca103onlineclasschapter15.ejs
@@ -90,7 +90,39 @@
                   </div>
                 
                 </div>  <!--Syllabus end-->
-                
+                <% 
+                        
+                        var paidStudent = [];
+                        
+                        if(studentFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentFee.length; i++) {
+                        
+                        if(studentFee[i].feeAmount >= 1000) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentExamFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentExamFee.length; i++) {
+                        
+                        if(studentExamFee[i].feeAmount == 1510) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentOtherFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentOtherFee.length; i++) {
+                        
+                        if(studentOtherFee[i].feeAmount >= 499) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(paidStudent.includes('paid')) {
+                        %> 
                 
                 
                 
@@ -695,7 +727,7 @@ a) =power(2^3 b) =power(2#3) c) =power(2*3) d) =power(2,3)
   </div>
 </div>
     
-
+<% } %>
   </body>
   
   
