--- a/views/dca103onlineclasschapter7.ejs
+++ b/views/dca103onlineclasschapter7.ejs
@@ -58,6 +58,39 @@
 										</div>
 									</div>
 									<!--Syllabus end-->
+									<% 
+                        
+                        var paidStudent = [];
+                        
+                        if(studentFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentFee.length; i++) {
+                        
+                        if(studentFee[i].feeAmount >= 1000) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentExamFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentExamFee.length; i++) {
+                        
+                        if(studentExamFee[i].feeAmount == 1510) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentOtherFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentOtherFee.length; i++) {
+                        
+                        if(studentOtherFee[i].feeAmount >= 499) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(paidStudent.includes('paid')) {
+                        %> 
 									<div class="accordion-item">
 										<!--khuhhawnna section started-->
 										<h2 class="accordion-header" id="panelsStayOpen-headingTwo">
@@ -554,7 +587,7 @@ d) All of the above }
   </div>
 </div>
 				
-				
+				<% } %>
 	</body>
 
 </html>
