--- a/views/dca105onlineclasschapter13.ejs
+++ b/views/dca105onlineclasschapter13.ejs
@@ -90,7 +90,39 @@
             
             <hr>
             
-            
+            <% 
+                        
+                        var paidStudent = [];
+                        
+                        if(studentFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentFee.length; i++) {
+                        
+                        if(studentFee[i].feeAmount >= 1000) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentExamFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentExamFee.length; i++) {
+                        
+                        if(studentExamFee[i].feeAmount == 1510) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentOtherFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentOtherFee.length; i++) {
+                        
+                        if(studentOtherFee[i].feeAmount >= 499) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(paidStudent.includes('paid')) {
+                        %> 
             <div class="accordion" id="accordionPanelsStayOpenExample">
   
                     <div class="accordion-item"> <!--syllabus section started-->
@@ -804,7 +836,7 @@
     </div>
   </div>
 </div>
-
+<% } %>
   </body>
   
   
