--- a/views/dca105onlineclasschapter5.ejs
+++ b/views/dca105onlineclasschapter5.ejs
@@ -131,7 +131,39 @@ Adjustment Layer or Fill Layer.
                 
                 </div>  <!--Syllabus end-->
                 
-                
+                <% 
+                        
+                        var paidStudent = [];
+                        
+                        if(studentFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentFee.length; i++) {
+                        
+                        if(studentFee[i].feeAmount >= 1000) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentExamFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentExamFee.length; i++) {
+                        
+                        if(studentExamFee[i].feeAmount == 1510) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentOtherFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentOtherFee.length; i++) {
+                        
+                        if(studentOtherFee[i].feeAmount >= 499) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(paidStudent.includes('paid')) {
+                        %> 
                 
                 
                 <div class="accordion-item"> <!--video section started-->
@@ -719,7 +751,7 @@ The <code>second </code>method for applying an adjustment is non-destructive and
     </div>
   </div>
 </div>
-    
+   <% } %> 
 
   </body>
   
