--- a/views/dca105welcomepage.ejs
+++ b/views/dca105welcomepage.ejs
@@ -14,14 +14,9 @@
 
 <div class="container">
 
-    <main class="ms-sm-auto">
-      
-
-      
+    <main>
       
       <!--a lane chung lam-->
-      
-
         
         <div class="row">
           
@@ -77,6 +72,39 @@
                               <a href="dca105onlineclasschapter1"><button type="button" class="btn btn-link m-2">Chapter-1 <i class="fas fa-angle-right"></i></button></a>
                               
                               </div>
+                              <% 
+                        
+                        var paidStudent = [];
+                        
+                        if(studentFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentFee.length; i++) {
+                        
+                        if(studentFee[i].feeAmount >= 1000) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentExamFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentExamFee.length; i++) {
+                        
+                        if(studentExamFee[i].feeAmount == 1510) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentOtherFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentOtherFee.length; i++) {
+                        
+                        if(studentOtherFee[i].feeAmount >= 499) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(paidStudent.includes('paid')) {
+                        %>
                               
                               <div class=" col-lg-3 col-md-6 col-sm-6"> 
                               
@@ -151,7 +179,7 @@
                                 
                                 </div>
 
- 
+                              <% } %>
                           </div> <!--fifth subject row end-->
 
                       </div>
