--- a/views/dca106onlineclasschapter13.ejs
+++ b/views/dca106onlineclasschapter13.ejs
@@ -131,7 +131,39 @@ Threading Text Frames, Converting Other Objects to Frames, Text Frames.
                 
                 </div>  <!--Syllabus end-->
                 
-                
+                <% 
+                        
+                        var paidStudent = [];
+                        
+                        if(studentFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentFee.length; i++) {
+                        
+                        if(studentFee[i].feeAmount >= 1000) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentExamFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentExamFee.length; i++) {
+                        
+                        if(studentExamFee[i].feeAmount == 1510) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentOtherFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentOtherFee.length; i++) {
+                        
+                        if(studentOtherFee[i].feeAmount >= 499) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(paidStudent.includes('paid')) {
+                        %> 
                 
                 
                 <div class="accordion-item"> <!--video section started-->
@@ -672,7 +704,7 @@ print separations or color composites <br><b>Ans... </b> CMYK
     </div>
   </div>
 </div>
-
+<% } %>
   </body>
   
   
