--- a/views/dca106onlineclasschapter5.ejs
+++ b/views/dca106onlineclasschapter5.ejs
@@ -133,7 +133,39 @@ and Embedding (OLE), Setting Up an OLE Liked Object, Embedding an OLE Object, Te
                 
                 </div>  <!--Syllabus end-->
                 
-                
+                <% 
+                        
+                        var paidStudent = [];
+                        
+                        if(studentFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentFee.length; i++) {
+                        
+                        if(studentFee[i].feeAmount >= 1000) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentExamFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentExamFee.length; i++) {
+                        
+                        if(studentExamFee[i].feeAmount == 1510) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentOtherFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentOtherFee.length; i++) {
+                        
+                        if(studentOtherFee[i].feeAmount >= 499) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(paidStudent.includes('paid')) {
+                        %> 
                 
                 
                 <div class="accordion-item"> <!--video section started-->
@@ -860,7 +892,7 @@ illustration programs
   </div>
 </div>
     
-
+<% } %>
   </body>
   
   
