--- a/views/dca1semOnlineLessonChapter10.ejs
+++ b/views/dca1semOnlineLessonChapter10.ejs
@@ -126,7 +126,39 @@
                 
                 </div>  <!--Syllabus video end-->
                 
-                
+          <% 
+                        
+                        var paidStudent = [];
+                        
+                        if(studentFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentFee.length; i++) {
+                        
+                        if(studentFee[i].feeAmount >= 1000) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentExamFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentExamFee.length; i++) {
+                        
+                        if(studentExamFee[i].feeAmount == 1510) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentOtherFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentOtherFee.length; i++) {
+                        
+                        if(studentOtherFee[i].feeAmount >= 499) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(paidStudent.includes('paid')) {
+                        %>       
              
                 
                 
@@ -901,7 +933,7 @@ Y2K - Year Two Thousand</p>
   </div>
 </div>
     
-
+<% } %>
   </body>
   
   
