--- a/views/dca1semOnlineLessonChapter4.ejs
+++ b/views/dca1semOnlineLessonChapter4.ejs
@@ -123,7 +123,39 @@ Sequential and Direct-Access Devices, Magnetic Tapes, Magnetic Disks, Optical Di
                 
                 </div>  <!--Syllabus video end-->
                 
-                
+                 <% 
+                        
+                        var paidStudent = [];
+                        
+                        if(studentFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentFee.length; i++) {
+                        
+                        if(studentFee[i].feeAmount >= 1000) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentExamFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentExamFee.length; i++) {
+                        
+                        if(studentExamFee[i].feeAmount == 1510) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentOtherFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentOtherFee.length; i++) {
+                        
+                        if(studentOtherFee[i].feeAmount >= 499) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(paidStudent.includes('paid')) {
+                        %>
                 
                 
                 <div class="accordion-item"> <!--video section started-->
@@ -845,9 +877,7 @@ digital cameras and solid-state drives.</p>
   </div>
 </div>
  
- 
- 
- 
+<% } %> 
  
   </body>
   
