--- a/views/dca1semOnlineLessonChapter6.ejs
+++ b/views/dca1semOnlineLessonChapter6.ejs
@@ -128,7 +128,39 @@ Software Engineering (What is Software Engineering, Need for Software Engineerin
                   </div>
                 
                 </div>  <!--Syllabus video end-->
-                
+                 <% 
+                        
+                        var paidStudent = [];
+                        
+                        if(studentFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentFee.length; i++) {
+                        
+                        if(studentFee[i].feeAmount >= 1000) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentExamFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentExamFee.length; i++) {
+                        
+                        if(studentExamFee[i].feeAmount == 1510) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentOtherFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentOtherFee.length; i++) {
+                        
+                        if(studentOtherFee[i].feeAmount >= 499) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(paidStudent.includes('paid')) {
+                        %>
                 
                 
                 
@@ -839,8 +871,7 @@ services. </p>
     </div>
   </div>
 </div>
-
+<% } %>
   </body>
-  
   
 </html>
