--- a/views/dca1semOnlineLessonChapter9.ejs
+++ b/views/dca1semOnlineLessonChapter9.ejs
@@ -130,7 +130,39 @@ Information Kiosks, Special Effects in Movies.
                 
                 </div>  <!--Syllabus video end-->
                 
-                
+                 <% 
+                        
+                        var paidStudent = [];
+                        
+                        if(studentFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentFee.length; i++) {
+                        
+                        if(studentFee[i].feeAmount >= 1000) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentExamFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentExamFee.length; i++) {
+                        
+                        if(studentExamFee[i].feeAmount == 1510) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(studentOtherFee.length != undefined) {
+                        
+                        for(var i = 0; i < studentOtherFee.length; i++) {
+                        
+                        if(studentOtherFee[i].feeAmount >= 499) {
+                            paidStudent.push('paid');
+                          }
+                        }
+                        }
+                        if(paidStudent.includes('paid')) {
+                        %>
                 
                 
                 <div class="accordion-item"> <!--video section started-->
@@ -803,8 +835,6 @@ crowd such as Shopping mall, Airport, Metros, Railway Station etc. </p>
     </div>
   </div>
 </div>
-
+<% } %>
   </body>
-  
-  
 </html>
