final prepare for live

--- a/views/stdDashboard.ejs
+++ b/views/stdDashboard.ejs
@@ -57,8 +57,8 @@
                             
                             %> 
                             <div class="alert alert-warning alert-dismissible fade show" role="alert">
-  <strong>Hello Dear!</strong> Kan website-ah kan lo lawm a che. Kan lesson siamte hi hriatthiam a harsa i ti a nih pawhin beidawng lo la,
-  muangchangin hmanhmawh lovin zir ang che. Zawhfiah duhte i neih chuan kan office-a thawktute leh kan instructor te i zawtfiah zel dawn nia. 
+  <strong>Hello Dear!</strong> Practical video hi kan la zo lo va, buaipui mek a ni. Tunah hian theory lesson kan zir hmasa dawn a ni.  Kan theory lesson siamte hi i zir hunah hriatthiam harsa i ti maithei a, i hre thiam vek lo a nih pawhin beidawng lo la,
+  hmanhmawh lovin zir la, i la hrefiah chho zel dawn a ni tih hria ang che. 
   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
                             
