dob convertDate removed

--- a/views/studentPage.ejs
+++ b/views/studentPage.ejs
@@ -108,7 +108,7 @@
                       
                       <td> : </td>
                       
-                      <td> <%= convertDate(students.dob)  %></td>
+                      <td> <%= students.dob  %></td>
                       
                       <td class="text-primary">Registration No.</td>
                       
