back to referer from pro and fee

--- a/views/studentPage.ejs
+++ b/views/studentPage.ejs
@@ -18,9 +18,7 @@
       
         <div class="text-center">
           
-          <a href="/stdList" class="fw-light small"> <i class="far fa-hand-point-left text-primary"></i> Back to List </a>
-          
-         
+          <a href="#" onclick="window.history.back();" class="small text-secondary"> <i class="fas fa-arrow-left pe-2"></i> Back to list</i> </a>
           
         </div>
         
