alert notification ads added

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -121,7 +121,7 @@
             <td> Rs. 499/se</td>
           </tr>
           <tr>
-            <td colspan="4" class="mb-1">Free account leh paid account sawifiahna: <a class="link-secondary text-decoration-none" href="/paid_unpaid_account"> Read More</a></td>
+            <td colspan="4" class="mb-1">Free account leh paid account sawifiahna: <a class="link-secondary text-decoration-none" href="/paid_unpaid_account"> ...read more</a></td>
           </tr>
         </tbody>
       </table>
