--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -9,7 +9,7 @@
   
   <div class="container border-bottom pb-3">
       
-    <a class="navbar-brand fw-normal pt-0 pb-0" href="/">
+    <a class="navbar-brand fw-normal pt-0 pb-0 branchNamejojo" href="/">
         
       <img src="/img/icon.png" alt="" width="40" height="32" /> Jojo Computer Institute
       
