--- a/views/stdDashboard.ejs
+++ b/views/stdDashboard.ejs
@@ -56,16 +56,27 @@
                         if(paidStudent.includes('paid')) {
                             
                             %> 
-                            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                            <div class="alert alert-primary alert-dismissible fade show" role="alert">
   <strong>Hello Dear!</strong> Practical video hi kan la zo lo va, buaipui mek a ni. Tunah hian theory lesson kan zir hmasa dawn a ni.  Kan theory lesson siamte hi i zir hunah hriatthiam harsa i ti maithei a, i hre thiam vek lo a nih pawhin beidawng lo la,
   hmanhmawh lovin zir la, i la hrefiah chho zel dawn a ni tih hria ang che. 
   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
+<div class="alert alert-success alert-dismissible fade show" role="alert">
+  <strong>Inhlawh duh tan!</strong> Computer zir tur pakhat i rawn hmuh chuan Rs. 500/- i hlawh thei. Mi 10 i hmuh chuan Rs. 5000/- i hlawh daih thei!. 
+  Pi Mary emaw Miss Hlui emaw be hmasa ang che.
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+
+<div class="alert alert-success alert-dismissible fade show" role="alert">
+  <strong>Internal Mark hmuh teuh dan!</strong> Kan theory lesson zawng zawng hi dik taka i chhan vek chuan internal-ah full mark i hmu thei.
+  Internal hian subject tinah mark 20 a pu a. Mark 20 i lo neih lawk chuan exam-ah pass a harsa vak lo vang. Lo chhang taima la, mark lo khawl rawh. Fighting!
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
                             
                        <% } else {%>
-                            <div class="alert alert-warning alert-dismissible fade show" role="alert">
-  <strong>Hello Dear!</strong> Tuna i account hi unpaid account a ni a, lesson tam tak i zir thei dawn lo a, study material i download thei dawn lo bawk a ni.
-  Account chungchang hi i hriatthiam theih nan <a href="/paid_unpaid_account" class="text-primary"> Learn more</a> hi click ang che. Zawhfiah duhte i neih chuan kan office-a thawkte i lo zawt zel dawn nia. 
+                            <div class="alert alert-primary alert-dismissible fade show" role="alert">
+  <strong>Hello Dear!</strong> Tuna i account hi unpaid account a ni a, i thil tih theih a limit dawn a; lesson tam tak i zir thei dawn lo a, study material i download thei lo bawk ang.
+  Account chungchang hi i hriatthiam theih nan <a href="/paid_unpaid_account" class="text-primary"> ...learn more</a> hi click ang che. 
   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
                      <%   } %> 
@@ -409,7 +420,7 @@
             
             var uniqueAddress = studentAddress.filter(onlyUnique);
             
-            for(var i=0; i < uniqueName.length; i++) {
+            for(var i=0; i < uniqueAddress.length; i++) {
             
             %>
              <tr>
